--- a/stylesheets/sidemenu.css
+++ b/stylesheets/sidemenu.css
@@ -1,1 +1,80 @@
-#sidemenu{width:180px}#sidemenu ul{margin-left:0;padding-left:0;list-style-type:none}#sidemenu a{display:block;padding:3px;width:160px;background-color:#fff;border-bottom:1px solid #eee;font-size:.7em}#sidemenu a:link,#sidemenu a:visited{color:#000;text-decoration:none}#sidemenu a:hover{background-color:#369;color:#fff}div.menu{margin:0;padding:0}div.menu ul{list-style-type:none;margin-left:0;margin-top:0}div.menu li a{width:100%;text-decoration:none;color:#c30;font-size:.7em;background-color:#fff;padding-left:0}div.menu li a:hover{background-color:#ddd;color:#000;text-decoration:none}div.menu li a:visited{color:#c30}div.menucategory{margin:0}.menucategory a{width:100%;display:block;border:1px solid #000;padding:2px;text-decoration:none;color:#000;font-weight:200;font-size:1em;background-color:#fff}.menucategory a:hover{background-color:#ddd;color:#000;text-decoration:none}.menucategory a:visited{color:#000}div.menu h3{font-size:2em;margin-bottom:0}div.menu h4{font-size:1.5em;margin-bottom:0}
+#sidemenu {
+  width: 180px;
+}
+#sidemenu ul {
+  margin-left: 0;
+  padding-left: 0;
+  list-style-type: none;
+}
+#sidemenu a {
+  display: block;
+  padding: 3px;
+  width: 160px;
+  background-color: #fff;
+  border-bottom: 1px solid #eee;
+  font-size: 0.7em;
+}
+#sidemenu a:link,
+#sidemenu a:visited {
+  color: #000;
+  text-decoration: none;
+}
+#sidemenu a:hover {
+  background-color: #369;
+  color: #fff;
+}
+div.menu {
+  margin: 0;
+  padding: 0;
+}
+div.menu ul {
+  list-style-type: none;
+  margin-left: 0;
+  margin-top: 0;
+}
+div.menu li a {
+  width: 100%;
+  text-decoration: none;
+  color: #c30;
+  font-size: 0.7em;
+  background-color: #fff;
+  padding-left: 0;
+}
+div.menu li a:hover {
+  background-color: #ddd;
+  color: #000;
+  text-decoration: none;
+}
+div.menu li a:visited {
+  color: #c30;
+}
+div.menucategory {
+  margin: 0;
+}
+.menucategory a {
+  width: 100%;
+  display: block;
+  border: 1px solid #000;
+  padding: 2px;
+  text-decoration: none;
+  color: #000;
+  font-weight: 200;
+  font-size: 1em;
+  background-color: #fff;
+}
+.menucategory a:hover {
+  background-color: #ddd;
+  color: #000;
+  text-decoration: none;
+}
+.menucategory a:visited {
+  color: #000;
+}
+div.menu h3 {
+  font-size: 2em;
+  margin-bottom: 0;
+}
+div.menu h4 {
+  font-size: 1.5em;
+  margin-bottom: 0;
+}
